--- a/index.html
+++ b/index.html
@@ -14,7 +14,36 @@
 <body>
     <div id="main">
         <header>
-            <div class="header__info"></div>
+            <ul class="header__info">
+                <div class="header__wrap">
+                    <li class="header__info-pin">
+                        <a href="#map-pin">
+                            <span>
+                                <img src="./img/icons/pin.png" alt="pin">
+                            </span>
+                            <p><span>г. Владивосток,</span> ул. Пушкинская, 17 А</p>
+                        </a>
+                    </li>
+                    <li class="header__info-whatsapp">
+                        <span>
+                            <img src="./img/icons/phone.png" alt="phone">
+                        </span>
+                        <p class="info-whatsapp__name">WhatsApp</p>
+                        <div class="info-whatsapp__container">
+                            <a href="tel:+78083535335">+ 7 808 353 53 35</a>
+                            <a href="tel:+78888888888">+ 7 888 888 88 88</a>
+                        </div>
+                    </li>
+                    <li class="header__info-cart">
+                        <a href="#cart">
+                            <span>
+                                <img src="./img/icons/cart.png" alt="cart">
+                            </span>
+                            <p>150 000 руб.</p>
+                        </a>
+                    </li>
+                </div>
+            </ul>
             <div class="header__menu">
                 <ul class="menu__list">
                     <li class="menu__item">
@@ -39,6 +68,7 @@
                     </li>
                 </ul>
             </div>
+
         </header>
 
         <div class="main-container">
@@ -49,6 +79,26 @@
                     <button type="button" class="btn-green">Каталог</button>
                 </div>
             </div>
+            <ul class="main-container__ads">
+                <li class="ads__item">
+                    <img src="./img/icons/free-delivery.png" alt="free delivery">
+                    <p><span>Бесплатная</span> доставка <br> по городу</p>
+                </li>
+                <li class="ads__item">
+                    <img src="./img/icons/card-gift.png" alt="card gift">
+                    <p>Открытка <span> в подарок</span><br>
+                        и фото вручения</p>
+                </li>
+                <li class="ads__item">
+                    <img src="./img/icons/timeall.png" alt="timeall">
+                    <p><span>Круглосуточная </span><br>
+                        доставка</p>
+                </li>
+                <li class="ads__item">
+                    <img src="./img/icons/system-sale.png" alt="system sale">
+                    <p>Накопительная <br> система <span>скидок</span></p>
+                </li>
+            </ul>
 
 
 
@@ -65,6 +115,7 @@
                     города доставки. Мы рекомендуем оформлять и оплачивать заказы заранее, особенно в праздничный
                     период. Более подробную информацию смотрите на странице.</p>
             </div>
+
         </div>
 
         <footer>
