--- a/index.html
+++ b/index.html
@@ -44,30 +44,29 @@
                     </li>
                 </div>
             </ul>
-            <div class="header__menu">
-                <ul class="menu__list">
-                    <li class="menu__item">
-                        <a href="#catalog">Каталог</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#feedback">Отзывы</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#contacts">Контакты</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#main-page">
-                            <img src="./img/logotype.png" alt="logotype" />
-                        </a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#info">Информация для клиента<span></span></a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#orders"><span></span>Мои заказы</a>
-                    </li>
-                </ul>
-            </div>
+            <ul class="header__menu">
+                <li class="menu__item">
+                    <a href="#catalog">Каталог</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#feedback">Отзывы</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#contacts">Контакты</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#main-page" class="logotype-wrap">
+                        <img src="./img/icons/logotype.png" alt="logotype" />
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="#info">Информация для клиента<span><img src="./img/icons/arrow-down.png"
+                                alt="arrow-down"></span></a>
+                </li>
+                <li class="menu__item">
+                    <a href="#orders"><span><img src="./img/icons/profile.png" alt="profile"></span>Мои заказы</a>
+                </li>
+            </ul>
 
         </header>
 
@@ -101,6 +100,152 @@
             </ul>
 
 
+            <div class="main-container__steps-order">
+                <h2><span>ЗАКАЗ</span> В 5 ШАГОВ</h2>
+                <ul class="steps-order__list">
+                    <li class="steps-order__item">
+                        <span><img src="./img/icons/first-bouqet.png" alt=""></span>
+                        <div class="item-wrap">
+                            <p>Выберите букет;</p>
+                            <p>В каталоге выберите понравившийся букет;</p>
+                        </div>
+                    </li>
+                    <li class="steps-order__item">
+                        <span><img src="./img/icons/second-bouqet.png" alt=""></span>
+                        <div class="item-wrap">
+                            <p>Укажите данные для доставки;</p>
+                            <p>Заполните форму доставки и оплатите заказ удобным для вас способом;</p>
+                        </div>
+                    </li>
+                    <li class="steps-order__item">
+                        <span><img src="./img/icons/third-bouqet.png" alt=""></span>
+                        <div class="item-wrap">
+                            <p>Выберите размер и дополнение;</p>
+                            <p>На странице с описанием букета выберите подходящий размер. По желанию, добавьте к букету
+                                мягкую игрушку, сладости или любой другой подарок;</p>
+                        </div>
+                    </li>
+                    <li class="steps-order__item">
+                        <span><img src="./img/icons/fourth-bouqet.png" alt=""></span>
+                        <div class="item-wrap">
+                            <p>Букет готов!</p>
+                            <p>Букет будет собран из свежайших цветов и доставлен получателю к указанной дате и времени.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+                <span class="steps-order__fon">
+                    <img src="./img/flower-fon.png" alt="flower fon">
+                </span>
+            </div>
+
+
+            <div class="main-container__gallery-wrap">
+                <div class="main-container__foto-feedback">
+                    <div class="main-container__foto">
+                        <h2><span>фото</span>хвасты</h2>
+                        <div class="foto__gallery">
+                            <img src="./img/photo-1.jpg" alt="photo">
+                            <img src="./img/photo-2.jpg" alt="photo">
+                            <img src="./img/photo-3.jpg" alt="photo">
+                            <img src="./img/photo-4.jpg" alt="photo">
+                        </div>
+                    </div>
+                    <div class="main-container__feedback">
+                        <h2>Отзывы</h2>
+
+                        <ul class="feedback__list">
+                            <li class="feedback__item">
+                                <div class="feedback__who">
+                                    <div class="feedback__name">
+                                        <p class="surname">Анатолий Петров</p> <br>
+                                        <p class="date">20.08.19 22:32</p>
+                                        <p class="city">г. Москва</p>
+                                    </div>
+                                    <div class="feedback__stars">
+                                        <span>
+                                            <img src="./img/icons/star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/gold-star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/gold-star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/gold-star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/gold-star.png" alt="">
+                                        </span>
+                                    </div>
+                                </div>
+                                <p>Огромное спасибо флористам! Остались очень довольны оказанными услугами,мастера
+                                    своего
+                                    дела! Букетик даже неожиданно красивее чем на картинке</p>
+                            </li>
+                            <li class="feedback__item">
+                                <div class="feedback__who">
+                                    <div class="feedback__name">
+                                        <p class="surname">Анатолий Петров</p> <br>
+                                        <p class="date">20.08.19 22:32</p>
+                                        <p class="city">г. Москва</p>
+                                    </div>
+                                    <div class="feedback__stars">
+                                        <span>
+                                            <img src="./img/icons/star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/gold-star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/gold-star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/gold-star.png" alt="">
+                                        </span>
+                                    </div>
+                                </div>
+                                <p>Огромное спасибо флористам! Остались очень довольны оказанными услугами,мастера
+                                    своего
+                                    дела! Букетик даже неожиданно красивее чем на картинке</p>
+                            </li>
+                            <li class="feedback__item">
+                                <div class="feedback__who">
+                                    <div class="feedback__name">
+                                        <p class="surname">Анатолий Петров</p> <br>
+                                        <p class="date">20.08.19 22:32</p>
+                                        <p class="city">г. Москва</p>
+                                    </div>
+                                    <div class="feedback__stars">
+                                        <span>
+                                            <img src="./img/icons/star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/gold-star.png" alt="">
+                                        </span>
+                                        <span>
+                                            <img src="./img/icons/gold-star.png" alt="">
+                                        </span>
+                                    </div>
+                                </div>
+                                <p>Огромное спасибо флористам! Остались очень довольны оказанными услугами,мастера
+                                    своего
+                                    дела! Букетик даже неожиданно красивее чем на картинке</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
             <div class="main-container__rules">
                 <p>Букеты создаются максимально похожими на фотографию с сайта. Приведенные примеры букетов являются
@@ -120,10 +265,69 @@
 
         <footer>
             <ul class="footer__menu">
-
+                <li class="f-menu__item">
+                    <a href="#">Каталог</a>
+                </li>
+                <li class="f-menu__item">
+                    <a href="#">Скидки</a>
+                </li>
+                <li class="f-menu__item">
+                    <a href="#">Отзывы</a>
+                </li>
+                <li class="f-menu__item">
+                    <a href="#">Контакты</a>
+                </li>
+                <li class="f-menu__item">
+                    <a href="#">Оферта</a>
+                </li>
+                <li class="f-menu__item">
+                    <a href="#">Информация для клиента</a>
+                </li>
             </ul>
             <div class="footer__info">
-
+                <ul class="f-info__contacts">
+                    <li class="f-info__item _active">Контактная информация</li>
+                    <li class="f-info__item">
+                        <a href="#">
+                            <span><img src="./img/icons/pin.png" alt=""></span>
+                            <p>г. Владивосток, <br> ул. Пушкинская, 17</p>
+                        </a>
+                    </li>
+                    <li class="f-info__item">
+                        <a href="#">
+                            <span><img src="./img/icons/phone.png" alt=""></span>
+                            <p>+ 7 888 888 88 88</p>
+                        </a>
+                    </li>
+                    <li class="f-info__item">
+                        <a href="#">
+                            <span><img src="./img/icons/phone.png" alt=""></span>
+                            <p>+ 7 888 888 88 88</p>
+                        </a>
+                    </li>
+                    <li class="f-info__item">
+                        <a href="#">
+                            <span><img src="./img/icons/time.png" alt=""></span>
+                            <p> Режим работы: <br>
+                                Пн-Сб с 8:00 до 22:00</p>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="f-info__contacts">
+                    <li class="f-info__item _active">Для посетителей</li>
+                    <li class="f-info__item">
+                        <a href="#">Оформление заказа</a>
+                    </li>
+                    <li class="f-info__item">
+                        <a href="#">Вопросы и ответы</a>
+                    </li>
+                    <li class="f-info__item">
+                        <a href="#">Изменение или отмена заказа</a>
+                    </li>
+                    <li class="f-info__item">
+                        <a href="#">Способы доставки и оплаты</a>
+                    </li>
+                </ul>
             </div>
             <div class="footer__copyright">
                 <p>© 2025 Доставка цветов</p>
