правки по комментариям

--- a/index.html
+++ b/index.html
@@ -88,21 +88,21 @@
                     <li class="steps-order__item">
                         <span><img src="./img/icons/first-bouqet.png" alt=""></span>
                         <div class="item-wrap">
-                            <p>Выберите букет;</p>
+                            <p>Выберите букет</p>
                             <p>В каталоге выберите понравившийся букет;</p>
                         </div>
                     </li>
                     <li class="steps-order__item">
                         <span><img src="./img/icons/second-bouqet.png" alt=""></span>
                         <div class="item-wrap">
-                            <p>Укажите данные для доставки;</p>
+                            <p>Укажите данные для доставки</p>
                             <p>Заполните форму доставки и оплатите заказ удобным для вас способом;</p>
                         </div>
                     </li>
                     <li class="steps-order__item">
                         <span><img src="./img/icons/third-bouqet.png" alt=""></span>
                         <div class="item-wrap">
-                            <p>Выберите размер и дополнение;</p>
+                            <p>Выберите размер и дополнение</p>
                             <p>На странице с описанием букета выберите подходящий размер. По желанию, добавьте к букету
                                 мягкую игрушку, сладости или любой другой подарок;</p>
                         </div>
@@ -140,7 +140,7 @@
                                     <div class="feedback__name">
                                         <p class="surname">Анатолий Петров</p> <br>
                                         <p class="date">20.08.19 22:32</p>
-                                        <p class="city">г. Москва</p>
+                                        <p class="city">г. Калининград</p>
                                     </div>
                                     <div class="feedback__stars">
                                         <span>
@@ -169,7 +169,7 @@
                                     <div class="feedback__name">
                                         <p class="surname">Анатолий Петров</p> <br>
                                         <p class="date">20.08.19 22:32</p>
-                                        <p class="city">г. Москва</p>
+                                        <p class="city">г. Калининград</p>
                                     </div>
                                     <div class="feedback__stars">
                                         <span>
@@ -198,7 +198,7 @@
                                     <div class="feedback__name">
                                         <p class="surname">Анатолий Петров</p> <br>
                                         <p class="date">20.08.19 22:32</p>
-                                        <p class="city">г. Москва</p>
+                                        <p class="city">г. Калининград</p>
                                     </div>
                                     <div class="feedback__stars">
                                         <span>
@@ -260,19 +260,16 @@
             <div class="footer__info">
                 <ul class="f-info__contacts">
                     <li class="f-info__item">
-                        <span><img src="./img/icons/pin.png" alt=""></span>
-                        <p>г. Калининград, <br> ул. Пушкинская, 17</p>
-
+                            <span><img src="./img/icons/pin.png" alt="pin"></span>
+                            <p>г. Калининград, <br>ул. Пушкинская, 17A</p>
                     </li>
                     <li class="f-info__item">
-                        <span><img src="./img/icons/phone.png" alt="phone"></span>
-                        <a href="tel:+78083535335">+ 7 808 353 53 35</a>
-
+                            <span><img src="./img/icons/phone.png" alt="phone"></span>
+                            <a href="tel:+78083535335">+ 7 808 353 53 35</a>
                     </li>
                     <li class="f-info__item">
-                        <span><img src="./img/icons/time.png" alt=""></span>
-                        <p> Режим работы: <br>
-                            Пн-Сб с 8:00 до 22:00</p>
+                            <span><img src="./img/icons/time.png" alt="time"></span>
+                            <p> Режим работы: <br>Пн-Сб с 8:00 до 22:00</p>
                     </li>
                 </ul>
             </div>
