add files for catalog

--- a/index.html
+++ b/index.html
@@ -82,6 +82,24 @@
                     <p>Накопительная <br> система <span>скидок</span></p>
                 </li>
             </ul>
+
+            <!-- основной блок для каталога -->
+            <div class="main-container__catalog">
+                <!-- блок для карточек -->
+                <ul class="content-catalog__cards-list">
+                    <!-- это карточка!  -->
+                    <li class="card-item">
+                        <!-- элементы карточки  -->
+                    </li>
+                    
+                    <li class="card-item">
+                        <!-- элементы карточки  -->
+                    </li>
+                </ul>
+                <!-- блок боковой с чекбоксами (без поиска) -->
+                <div class="main-container__sidebar"></div>
+            </div>
+
             <div class="main-container__steps-order">
                 <h2><span>ЗАКАЗ</span> В 5 ШАГОВ</h2>
                 <ul class="steps-order__list">
